--- a/index.css
+++ b/index.css
@@ -231,7 +231,7 @@ html {
   font-weight: 300;
   margin-bottom: 10px;
   letter-spacing: 1px;
-  color: #575756;
+  color: #009D80;
   margin-top: 15px;
 }
 @media only screen and (min-width: 768px) {
@@ -243,7 +243,7 @@ html {
     transform: translateX(-50%);
     width: 2px;
     height: 100%;
-    background-color: var(--primaryG);
+    background-color: #f0f0f0;
   }
   .timeline ul li {
     width: 50%;
@@ -268,7 +268,7 @@ html {
     height: 20px;
     width: 20px;
     border-radius: 50%;
-    background-color: var(--primaryG);
+    background-color: #f0f0f0;
     top: 0px;
   }
   .timeline ul li:nth-child(odd)::before {
@@ -284,7 +284,7 @@ html {
     top: -5px;
   }
   .timeline ul li:hover::before {
-    background-color: #009D80;
+    background-color: #d0d0d0;
   }
 }
 
