--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,9 +95,15 @@ h2 {
     color: #fff;
     text-transform: uppercase;
     max-width: 730px;
-    margin: 0 auto; }
+    margin: 0 auto; 
+    opacity: 90%;}
+  .fh5co-home-banner h3 {
+    font-size: 22px;
+    color: #fff;
+    opacity: 50%;
+    max-width: 730px;
+    margin: 10px auto; }
   .fh5co-home-banner a {
-    text-transform: uppercase;
     color: #fff;
     width: 198px;
     border-radius: 40px;
