--- a/index.css
+++ b/index.css
@@ -291,3 +291,43 @@ html {
 #breakers {
     font-size: 10px;
 }
+
+
+
+/* campaign-timer */
+.campaign-timer{
+  background: rgba(50,55,63,.00);
+  max-width: 555px;
+  margin: 5px auto;
+  padding:5px 0 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 20px rgba(34,31,31,.2);
+}
+.camp {
+  display: block;
+  font-size: 14px;
+  color: #fff;
+  font-weight:600;
+  font-family: 'Poppins', sans-serif;
+  padding: 10px 0;
+  opacity: 50%;
+}
+.time-after{
+  position:relative;
+}
+.time-after:after{
+  position:absolute;
+  content:':';
+  top:10px;
+  right:-8px;
+}
+.time {
+  display: inline-block;
+  line-height: 1;
+  padding: 5px 12px 0;
+  font-weight: 500;
+  font-size: 22px;
+  color: #fff;
+  font-family: 'Poppins', sans-serif;
+  opacity: 50%;
+}/* campaign-timer */
