--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -815,7 +815,8 @@ footer {
       padding: 40px 0; } }
 
 .blog-content-inner {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.88);
+  
   /* background-color: #009d80; */
   padding: 70px;
   border-radius: 15px; }
