--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,16 +173,16 @@ h2 {
     background: #fff;
     border-radius: 0 15px 15px 0; }
     .contact-pop .content h3 {
-      color: #3d383a;
+      color: #575756;
       font-size: 30px;
       text-transform: uppercase;
       margin-bottom: 10px; }
     .contact-pop .content h4 {
-      color: #978b91;
+      color: #575756;
       font-size: 18px;
       /*font-family: "PT-Sans-Regular"; */}
     .contact-pop .content p {
-      color: #584f53; }
+      color: #575756; }
     .contact-pop .content hr {
       background-color: #009d80;
       width: 50px;
@@ -743,7 +743,7 @@ footer {
     footer .contact-form .form-control {
       margin-bottom: 20px;
       border: none;
-      background-color: #ebd8df;
+      background-color: #f0f0f0;
       border-radius: 25px;
       font-size: 15px;
       padding: 25px 30px; }
