--- a/index.css
+++ b/index.css
@@ -299,7 +299,7 @@ html {
   background: rgba(50,55,63,.00);
   max-width: 555px;
   margin: 5px auto;
-  padding:5px 0 10px;
+  padding:5px 0 5px;
   border-radius: 5px;
   box-shadow: 0 0 20px rgba(34,31,31,.2);
 }
@@ -318,7 +318,7 @@ html {
 .time-after:after{
   position:absolute;
   content:':';
-  top:10px;
+  top:4px;
   right:-8px;
 }
 .time {
@@ -331,3 +331,15 @@ html {
   font-family: 'Poppins', sans-serif;
   opacity: 50%;
 }/* campaign-timer */
+
+@media (max-width: 600px) {
+  .time {
+    padding: 5px 5px 0;
+    font-size: 18px;
+  }
+
+  .camp {
+    font-size: 12px;
+  }
+  
+}
