--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -739,7 +739,7 @@ footer {
   footer .contact-form {
     border-radius: 25px;
     padding: 35px;
-    background-color: #fff;
+    background-color: #fffffff6;
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.2);
     width: 100%;
     max-width: 1300px;
